<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.auth.LoginFragment">


    <TextView
        android:id="@+id/login_tv_greeting"
        style="@style/CustomTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="40dp"
        android:text="@string/login_greeting_message" />

    <TextView
        android:id="@+id/login_tv_email_hint"
        style="@style/CustomTextViewHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_tv_greeting"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="95dp"
        android:text="@string/login_email_hint" />

    <EditText
        android:id="@+id/login_et_email"
        style="@style/CustomEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_tv_email_hint"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="40dp"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/login_tv_password_hint"
        style = "@style/CustomTextViewHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_et_email"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="65dp"
        android:layout_marginLeft="40dp"
        android:text="@string/login_password_hint" />

    <EditText
        android:id="@+id/login_et_password"
        style="@style/CustomEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_tv_password_hint"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="40dp"
        android:minHeight="48dp"
        android:inputType="textPassword"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/login_tv_forget_password"
        style = "@style/CustomTextViewTinyHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_et_password"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="40dp"
        android:text="@string/login_forget_text" />

    <Button
        android:id="@+id/login_btn_login"
        style="@style/CustomTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_et_password"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="100dp"
        android:text="@string/login_signin_button" />


    <TextView
        android:id="@+id/login_tv_signup"
        style = "@style/CustomTextViewTinyHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_et_email"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="40dp"
        android:text="@string/login_signup_button" />
    



</RelativeLayout>