<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.auth.RegistrationFragment">

    <TextView
        android:id="@+id/registration_tv_message"
        style="@style/CustomTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="40dp"
        android:text="@string/registration_tv_greeting" />

    <TextView
        android:id="@+id/registration_tv_main_hint"
        style="@style/CustomTextViewHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below = "@id/registration_tv_message"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="40dp"
        android:text="@string/login_email_hint" />

    <EditText
        android:id="@+id/registration_et_main"
        style="@style/CustomEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registration_tv_main_hint"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/registration_btn_next"
        style="@style/CustomTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registration_et_main"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="60dp"
        android:text="@string/registration_next_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registration_btn_back"
        style="@style/CustomBorderedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registration_btn_next"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/registration_back_button" />


</RelativeLayout>